--- a/chat-uikit/package.json
+++ b/chat-uikit/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.2",
-    "es-uikit": "^1.0.46",
+    "chat-uikit": "^1.0.71",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
