--- a/Chat-Android/app/src/main/AndroidManifest.xml
+++ b/Chat-Android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:allowBackup="true"
@@ -28,12 +29,18 @@
         </provider>
 
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".NavigationActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FetchMessagesFromServerActivity" />
+        <activity android:name=".ImportMessagesActivity" />
+        <activity android:name=".SendAudioMessageActivity" />
 
     </application>
 
