--- a/Chat-Android/app/src/main/AndroidManifest.xml
+++ b/Chat-Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.agora.chat">
+    package="io.agora.agorachatquickstart">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -28,19 +28,19 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="io.agora.agorachatquickstart.MainActivity">
 
         </activity>
-        <activity android:name=".NavigationActivity" >
+        <activity android:name="io.agora.agorachatquickstart.NavigationActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FetchMessagesFromServerActivity" />
-        <activity android:name=".ImportMessagesActivity" />
-        <activity android:name=".SendAudioMessageActivity" />
+        <activity android:name="io.agora.agorachatquickstart.FetchMessagesFromServerActivity" />
+        <activity android:name="io.agora.agorachatquickstart.ImportMessagesActivity" />
+        <activity android:name="io.agora.agorachatquickstart.SendAudioMessageActivity" />
 
     </application>
 
