--- a/Chat-HarmonyOS/entry/oh-package.json5
+++ b/Chat-HarmonyOS/entry/oh-package.json5
@@ -6,7 +6,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "chatsdk": "file:./libs/chatsdk-1.1.0.har"
+    "@easemob/chatsdk": "file:./libs/chatsdk-1.2.0.har"
   }
 }
 
